--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -25,6 +25,8 @@ p {
   margin-bottom: 50px;
   border-radius: 50%;
   background-color: aqua;
+  box-shadow: 0px 0px 12px 11px rgba(34, 60, 80, 0.2);
+  
 }
 
 .name {
@@ -48,8 +50,11 @@ p {
   display: flex;
   justify-content: space-around;
   list-style: none;
-  padding: 0;
+  padding: 10px;
   margin: 0;
+  background-color: aqua;
+  border-radius: 20px;
+  box-shadow: 0px 0px 12px 11px rgba(34, 60, 80, 0.2);
 }
 
 .label {
