--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -15,7 +15,7 @@
   font-size: 60px;
   font-weight: bold;
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 110px;
 }
 
 .list {
@@ -31,6 +31,12 @@
   width: 120px;
   display: flex;
   flex-direction: column;
+
+  padding: 10px;
+
+  background-color: aqua;
+  border-radius: 20px;
+  box-shadow: 0px 0px 12px 11px rgba(34, 60, 80, 0.2);
 }
 
 .item:not(:last-child) {
@@ -38,7 +44,7 @@
 }
 
 .label {
-  font-size: 50px;
+  font-size: 45px;
   margin-bottom: 30px;
 }
 
